# AppGuiTesting

./: .travis.yml  .travislll.yml  README.md  S.py  Watch_Dog.py  pyproject.toml  run.py
Base/: Action.py  __init__.py
Data/: config.ini  environment_info.yaml
Exception/: __init__.py  exceptions.py
Page/: Pages.py  Tools.py  __init__.py
Page/template/: pages
Page/yaml/: home_page.yaml  login_page.yaml
Report/html/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
Report/html/data/test-cases/: c0e81f3eabf8cd7a.json
Report/html/export/: influxDbData.txt  prometheusData.txt
Report/html/history/: duration-trend.json  history.json
Report/html/widgets/: status-chart.json  suites.json  summary.json
Report/xml/: 29c41c38-b81b-45b3-8e82-1b0b87619460-result.json  2f0b822a-99d7-4bb9-b078-f5fdba4789f6-container.json  6aa3e3e3-76db-4158-b7ab-4402b3a778e8-container.json  7074cfe5-9e5e-4b16-bb2d-4e2f97767edd-result.json
Test/: Test_home.py  __init__.py  conftest.py  steps.py  test_dome.py
Utils/: Config.py  Environment.py  Log.py  Shell.py  Tools.py  __init__.py
report/xml/: 0ed815b2-9ccd-444d-9258-e5e0f1a99950-result.json  15fd8c07-e806-4d17-ac9d-911a3ef58b7f-container.json  39516e50-4eb8-492e-b84f-880681449578-container.json  56c7c02c-1ad0-44c5-8f4f-e74ff217d124-container.json  75e0a003-ef9c-46da-b7fb-ea8906f40518-container.json  900645b0-8350-41b4-9214-2faec3e7bd2e-result.json  951df8cf-bbc9-4518-ade4-1d8d06d60725-result.json  f06a690b-93e9-4c06-b82a-18fb6f8e26ab-result.json
